[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/GainSkill.gd" type="Script" id=1]

[node name="GainSkill" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -84.0
margin_top = -75.0
margin_right = 1139.0
margin_bottom = 669.0
color = Color( 0, 0, 0, 0.439216 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 108.0
margin_top = 99.0
margin_right = 431.0
margin_bottom = 152.0
rect_scale = Vector2( 3, 3 )
text = "You have acquired following upgrades.
Equip them will remove the upgrades 
you currently own."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="RichTextLabel" parent="ColorRect"]
margin_left = 428.0
margin_top = 371.0
margin_right = 684.0
margin_bottom = 499.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ColorRect/Choice1"]
margin_left = -16.0
margin_top = -16.0
margin_right = 264.0
margin_bottom = 24.0
color = Color( 0.278431, 1, 0.94902, 1 )

[node name="Choice2" type="RichTextLabel" parent="ColorRect"]
margin_left = 804.0
margin_top = 371.0
margin_right = 1060.0
margin_bottom = 499.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ColorRect/Choice2"]
margin_left = -24.0
margin_top = -16.0
margin_right = 272.0
margin_bottom = 24.0
color = Color( 0.278431, 1, 0.94902, 1 )

[node name="Equip" type="Button" parent="ColorRect"]
margin_left = 468.0
margin_top = 603.0
margin_right = 556.0
margin_bottom = 651.0
text = "Equip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="ColorRect"]
margin_left = 636.0
margin_top = 603.0
margin_right = 724.0
margin_bottom = 651.0
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ColorRect/Equip" to="." method="_on_Equip_pressed"]
[connection signal="pressed" from="ColorRect/Cancel" to="." method="_on_Cancel_pressed"]
